@startuml
skinparam class {
    BackgroundColor white
    ArrowColor Firebrick
    BorderThickness 2
}
skinparam roundcorner 0
skinparam packagestyle Frame
hide empty members

package backend{
    left to right direction
    skinparam linetype ortho

    hide empty members
    class GameController {
        -gameService: GameService
        +createGame(): GameDto
        +getGame(gameId: String) : GameDto
        +enterGame(gameId: String, playerDto: PlayerJoinRequestDto) : PlayerDto
        +leaveGame(gameId: String, playerId: String) : void
        +submitProposition(roundId: String, playerId: String, proposition: PropositionSubmissionDto) : void
        +selectProposition(roundId: String, propositionId: String, playerId: String) : void
        +getRound(gameId: String, playerId: String) : RoundDto
        +enterRound(gameId: String, playerId: String) : RoundDto
    }
    class GameDto {
        -id: String
        -state: State
    }
    class Game {
        id: String
        waitingRoom: Map<Player>
        activePlayers: Map<Player>
        getState(): Game.State
    }
    class Prompt{
        -statement: String
        -totalPlaceholders: int
        -hasBeenUsed: boolean
    }

    class Proposition{
          -id: String
          -playerId: String
          -gaps: List<String>
          -duplicates: List<Proposition>
          +hasSameGaps(proposition: Proposition): Boolean
    }

    interface GameService{
       createGame(): Game
       leaveGame(gameId: String, playerId: String): void
       getGame(gameId: String) : Game
       enterGame(gameId: String, playerName: String) : Player
       enterRound(gameId: String, playerId: String) : Round
    }
    interface RoundService{
        selectSphinx(game: Game);
        createNewRound(game: Game);
        getRoundReadyForSelections(roundId: String, playerId: String):Round
        submitProposition(roundId: String, playerId: String, gaps: List<String>)
        selectProposition(roundId: String, playerId: String, propositionId: String)
    }
    interface GameRepository
    class PlayerDto {
        -id: String
    }
    class PlayerJoinRequestDto {
        -playerName:String
    }
    class PropositionSubmissionDto {
        -gaps: List<String>
    }
    class RoundDto {
        -id: String
        -prompt: String
    }
    class Player {
        -id: String
    }
    class Round {
        -id: String
        -prompt: Prompt
        -propositions: Map<Proposition>
        -selections: Map<Selection>
        +getState(): Round.State
    }
    class PostfixGenerator {
        -postFixes: Random
    }
    exception GameError {
        FullCapacityException
        AlreadyExists
        NotFoundException
    }
    exception RoundError {
        OngoingException
        NotFoundException
    }
    exception PropositionError {
        NotFoundException
    }
    exception PlayerError {
        NotFoundException
    }

    interface FileReader{
        readFile(file: File): List<Prompt>
    }

    class TextFileReader
    class GameIdGenerator{
        +generateId():String{static}
    }

    GameController..>PlayerDto
    GameController..>PlayerJoinRequestDto
    GameController..>PropositionSubmissionDto
    GameController..>RoundDto
    GameController "1"..>"*" GameDto
    GameController "1"-->"1" RoundService
    GameController "1"-->"1" GameService

    GameService "1"..>"*" Game
    GameService ..> Player
    GameService "1"..>"*" GameError
    GameService ..> RoundError
    GameService ..> PlayerError
    GameService ..> PropositionError
    GameService "1"-->"1" EntityService
    GameService ..> Proposition
    GameService "1"-->"1" PostfixGenerator
    GameService "1"-->"1" GameIdGenerator
    GameService "1"-->"1" RoundService

    EntityService "1"-->"1" GameRepository

    RoundService --> EntityService

    TextFileReader ..> Prompt
    FileReader<|-TextFileReader

    Game -> Round
@enduml